k8s/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      volumes:
        - name: matter
        - name: ha-storage
          hostPath:
            path: "/data/homeassistant/storage"
            type: Directory
        - name: ha-mysql
          hostPath:
            path: "/data/homeassistant/mysql"
            type: Directory
            #- name: dbus
            #  hostPath:
            #    path: /run/dbus
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2026.9.4 # {"$imagepolicy": "flux-system:homeassistant"}
          name: home-assistant
          volumeMounts:
            - name: ha-storage
              mountPath: /config
              #- name: dbus
              #  mountPath: /run/dbus
              #- name: usb
              #  mountPath: /dev/ttyUSB0
          securityContext:
            privileged: true
        - image: mysql:8.1.0 # {"$imagepolicy": "flux-system:homeassistant-mysql-no-more"}
          name: mysql
          volumeMounts:
            - name: ha-mysql
              mountPath: /var/lib/mysql
